<resources>
    <string name="app_name">gasto_viagem</string>
    <string name="distance">Distância</string>
    <string name="total_distance">Total da Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_litro">Preço por litro</string>
    <string name="kms_per_litro">KMs por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_value">Seu gasto total será de:</string>
    <string name="total_price">R$ 0</string>
    <string name="calculate">calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>